<resources>
    <string name="app_name">Agamers</string>
    <string name="registre_nom">Nom*</string>
    <string name="registre_cognom">Cognoms*</string>
    <string name="nom_d_usuari">Nom d\'usuari*</string>
    <string name="registre_email">Email*</string>
    <string name="registre_contrassenya">Contrasenya*</string>
    <string name="registre_confirmar_contrassenya">Confirmar contrasenya*</string>
    <string name="registre_titol_pantalla">Registre</string>
    <string name="registre_termes_i_condicions">Termes i condicions</string>
    <string name="registrar_button">Registrar</string>
    <string name="registre_ok">T\'has registrat correctament!</string>
    <string name="registre_error">Hi ha un error, torna-ho a intentar de nou o contacta amb nosaltres a anoiagamers@gmail.com</string>
    <string name="error_username_no_vàlid">Ha de tenir entre 3-20 caràcters. Pot contenir minúscules, majúscules, numeros "." i "_"</string>
    <string name="error_nom_no_vàlid">El nom conté valors no vàlids. Revisa que no hi hagi cap numero o caràcter especial. Max 40 caràcters</string>
    <string name="error_cognom_no_vàlid">El cognom conté valors no vàlids. Revisa que no hi hagi cap numero o caràcter especial. Max 40 caràcters</string>
    <string name="error_contra_no_vàlida">Ha de tenir entre 8-20 caràcters. Ha de contenir majúscules, minúscules i numeros</string>
    <string name="error_confirmar_contra">La contrasenya que has introduït no coincideix. Revisa-ho</string>
    <string name="error_mail_no_vàlid">El correu no es vàlid. Torna a comprovar-ho</string>
    <string name="inici_recuperar_contra">Recuperar contrasenya</string>
    <string name="inici_camp_user">Usuari o email</string>
    <string name="inici_camp_contra">Contrasenya</string>
    <string name="inici_mantenir_sesio">Mantenir sessió iniciada</string>
    <string name="inici_button_iniciar">Iniciar sessió</string>
    <string name="inici_button_registre">Registrar-me</string>
    <string name="terms_button_acceptar">Accepto</string>
    <string name="terms_button_declinar">No accepto</string>
    <string name="login_succes">Has iniciat sesió correctament. Et redigirem en breus instants</string>
    <string name="login_error">Hi ha algut algun error, mira que tot estigui correcte i intenta-ho de nou</string>
    <string name="signup_date_error">Escull una data vàlida</string>
    <string name="termes_i_condicions_titol" translatable="false">End-User License Agreement (EULA) of AGamers</string>
    <string name="termes_i_condicions_text" translatable="false">This End-User License Agreement ("EULA") is a legal agreement between you and Anoia Gamers Corp.. Our EULA was created by EULA Template for AGamers.

        This EULA agreement governs your acquisition and use of our AGamers software ("Software") directly from Anoia Gamers Corp. or indirectly through a Anoia Gamers Corp. authorized reseller or distributor (a "Reseller"). Our Privacy Policy was created by the Privacy Policy Generator.

        Please read this EULA agreement carefully before completing the installation process and using the AGamers software. It provides a license to use the AGamers software and contains warranty information and liability disclaimers.

        If you register for a free trial of the AGamers software, this EULA agreement will also govern that trial. By clicking "accept" or installing and/or using the AGamers software, you are confirming your acceptance of the Software and agreeing to become bound by the terms of this EULA agreement.

        If you are entering into this EULA agreement on behalf of a company or other legal entity, you represent that you have the authority to bind such entity and its affiliates to these terms and conditions. If you do not have such authority or if you do not agree with the terms and conditions of this EULA agreement, do not install or use the Software, and you must not accept this EULA agreement.

        This EULA agreement shall apply only to the Software supplied by Anoia Gamers Corp. herewith regardless of whether other software is referred to or described herein. The terms also apply to any Anoia Gamers Corp. updates, supplements, Internet-based services, and support services for the Software, unless other terms accompany those items on delivery. If so, those terms apply.

        License Grant
        Anoia Gamers Corp. hereby grants you a personal, non-transferable, non-exclusive licence to use the AGamers software on your devices in accordance with the terms of this EULA agreement.

        You are permitted to load the AGamers software (for example a PC, laptop, mobile or tablet) under your control. You are responsible for ensuring your device meets the minimum requirements of the AGamers software.

        You are not permitted to:

        Edit, alter, modify, adapt, translate or otherwise change the whole or any part of the Software nor permit the whole or any part of the Software to be combined with or become incorporated in any other software, nor decompile, disassemble or reverse engineer the Software or attempt to do any such things
        Reproduce, copy, distribute, resell or otherwise use the Software for any commercial purpose
        Allow any third party to use the Software on behalf of or for the benefit of any third party
        Use the Software in any way which breaches any applicable local, national or international law
        use the Software for any purpose that Anoia Gamers Corp. considers is a breach of this EULA agreement
        Intellectual Property and Ownership
        Anoia Gamers Corp. shall at all times retain ownership of the Software as originally downloaded by you and all subsequent downloads of the Software by you. The Software (and the copyright, and other intellectual property rights of whatever nature in the Software, including any modifications made thereto) are and shall remain the property of Anoia Gamers Corp..

        Anoia Gamers Corp. reserves the right to grant licences to use the Software to third parties.

        Termination
        This EULA agreement is effective from the date you first use the Software and shall continue until terminated. You may terminate it at any time upon written notice to Anoia Gamers Corp..

        It will also terminate immediately if you fail to comply with any term of this EULA agreement. Upon such termination, the licenses granted by this EULA agreement will immediately terminate and you agree to stop all access and use of the Software. The provisions that by their nature continue and survive will survive any termination of this EULA agreement.

        Governing Law
        This EULA agreement, and any dispute arising out of or in connection with this EULA agreement, shall be governed by and construed in accordance with the laws of es.</string>
    <string name="fondo_agamers" translatable="false">Fondo Agamers</string>
    <string name="lodo_agamers" translatable="false">Logo Agamers</string>
    <string name="singup_username">Username*</string>
    <string name="data">Data de neixament (dd/mm/yyyy)* </string>
    <string name="edit_account_guardar_i_sortir">Guardar i sortir</string>
    <string name="edit_account_sortir_sense_guardar">Sortir sense guardar</string>
    <string-array name="Genere">
        <item>Home</item>
        <item>Dona</item>
        <item>No binari</item>
        <item>Per defecte (sense especificar)</item>
    </string-array>
    <string name="edit_account_message_data_not_saved">La informació que has editat no es guardarà</string>
    <string name="option_cancell">Enrere</string>
    <string name="option_ok">OK</string>
    <string name="edit_account_not_saved_title">Les dades no es guardaràn</string>
    <string name="genere_male">Home</string>
    <string name="genere_female">Dona</string>
    <string name="genere_no_binari">No binari</string>
    <string name="genere_sense_especificar">Sense especificar</string>
    <string name="genere_select_title">Selecciona un gènere</string>
    <string name="user_info_tancar_sessio">Tancar sessió</string>
    <string name="delete_account_ok">El compte s\'ha eliminat correctament</string>
    <string name="delete_account_error">Error: Hi ha agut algun error, torna-ho a intentar més tard</string>
    <string name="account_parameter_email">Email</string>
    <string name="buttons_recover_password">Recuperar contrasenya</string>
    <string name="buttons_update_password">Actualitzar contrasenya</string>
    <string name="recover_password_digits">Codi de 6 dígits</string>
    <string name="recover_password_new_pass">Nova contrasenya</string>
    <string name="recover_pass_1_ok">S\'ha enviat un correu al mail que has proporcionat</string>
    <string name="recover_pass_1_error">Hi ha hagut algun error. Torna-ho a intentar</string>
    <string name="recover_pass_2_ok">Contrasenya canviada correctament</string>
    <string name="recover_pass_2_error">Hi ha hagut algun error, comprova que el codi sigui el correcte o que no t\'hagis equivocat a l\'introduir el correu al pas anterior.</string>
    <string name="implementations_edit_info_user_pass">Clau encriptada</string>
    <string name="alerts_exit_app_title">Vols sortir de l\'aplicació?</string>
    <string name="alerts_exit_app_message">Aquesta acció farà que la app es tanqui</string>
    <string name="error_recoverycode_no_vàlid">Codi en format incorrecte. Revisa-ho</string>
    <string name="recover_pass_title">Recuperar contrasenya</string>
    <string name="update_account_ok">Informació canviada</string>
    <string name="update_account_error">Sembla que hi ha hagut algun error i no s\'ha pogut modificar la informació</string>
    <string name="signup_ok">S\'ha registrat correctament!</string>
    <string name="signup_error">Hi ha hagut algun error. Potser aquest usuari ja existeix</string>
    <string name="userinfo_titulopantalla">Perfil usuari</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="wait_fragment">Un moment...</string>
    <string name="encrypted_password">Contrasenya encriptada</string>
    <string name="account_username">Username</string>
    <string name="account_password">Contrasenya</string>
    <string name="account_email">Email</string>
    <string name="account_name">Nom</string>
    <string name="account_surname">Cognom</string>
    <string name="titol_xats">Xats</string>
    <string name="titol_match" translatable="false">Match</string>
    <string name="titol_forums">Forums</string>
    <string name="menu_inici">Inici</string>
    <string name="menu_notificacions">Notificacions</string>
    <string name="menu_peticions">Peticions i matches</string>
    <string name="menu_favortis">Favorits</string>
    <string name="menu_jocs">Jocs</string>
    <string name="menu_botiga">Botiga</string>
    <string name="menu_el_meu_compte">El meu perfil</string>
    <string name="menu_configuracio">Configuració</string>
    <string name="menu_tancarsessio">Tancar sessió</string>
    <string name="menu_tornejos">Tornejos</string>
    <string name="fragment_addgame">Afegeix un joc</string>
    <string name="Text_bio" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="sobre_usuari_x">Sobre usuari</string>
    <string name="assoliments_recents">Assoliments recents</string>
    <string name="Enviar_peticio_amistat">Enviar solicitud amistat</string>
    <string name="compartir_perfil">Compartir perfil</string>
    <string name="xatejar">Xatejar</string>
    <string name="medalla_2">Medalla 2</string>
    <string name="medalla_1">Medalla 1</string>
    <string name="valoracions">Valoracions</string>
    <string name="imatge_perfil">Imatge de perfil</string>
</resources>