<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inici">

    <fragment
        android:id="@+id/navegacio_forums"
        android:name="dam.agamers.gtidic.udl.agamers.views.forums.ForumsFragment"
        android:label="@string/titol_forums"
        tools:layout="@layout/fragment_forums" />
    <fragment
        android:id="@+id/navegacio_xats"
        android:name="dam.agamers.gtidic.udl.agamers.views.xats.XatsFragment"
        android:label="@string/titol_xats"
        tools:layout="@layout/fragment_xats" >
        <action
            android:id="@+id/action_navegacio_xats_to_allxatmessages"
            app:destination="@id/allxatmessages" />
    </fragment>

    <fragment
        android:id="@+id/navegacio_match"
        android:name="dam.agamers.gtidic.udl.agamers.views.match.MatchFragment"
        android:label="@string/titol_match"
        tools:layout="@layout/fragment_match" />

    <fragment
        android:id="@+id/nav_inici"
        android:name="dam.agamers.gtidic.udl.agamers.views.inici.IniciFragment"
        android:label="@string/menu_inici"
        tools:layout="@layout/fragment_inici" />

    <fragment
        android:id="@+id/nav_notificacions"
        android:name="dam.agamers.gtidic.udl.agamers.views.notificacions.NotificacionsFragment"
        android:label="@string/menu_notificacions"
        tools:layout="@layout/fragment_notificacions" />

    <fragment
        android:id="@+id/nav_peticions"
        android:name="dam.agamers.gtidic.udl.agamers.views.peticions.PeticionsFragment"
        android:label="@string/menu_peticions"
        tools:layout="@layout/fragment_peticions" />
    <fragment
        android:id="@+id/nav_favorits"
        android:name="dam.agamers.gtidic.udl.agamers.views.favorits.FavoritsFragment"
        android:label="@string/menu_favortis"
        tools:layout="@layout/fragment_favorits" />
    <fragment
        android:id="@+id/nav_botiga"
        android:name="dam.agamers.gtidic.udl.agamers.views.botiga.BotigaFragment"
        android:label="@string/menu_botiga"
        tools:layout="@layout/fragment_botiga" />
    <fragment
        android:id="@+id/nav_tornejos"
        android:name="dam.agamers.gtidic.udl.agamers.views.tornejos.TornejosFragment"
        android:label="@string/menu_tornejos"
        tools:layout="@layout/fragment_tornejos" />
    <fragment
        android:id="@+id/nav_compte"
        android:name="dam.agamers.gtidic.udl.agamers.views.compte.CompteFragment"
        android:label="@string/menu_el_meu_compte"
        tools:layout="@layout/fragment_compte" />
    <fragment
        android:id="@+id/nav_configuracio"
        android:name="dam.agamers.gtidic.udl.agamers.views.configuracio.ConfiguracioFragment"
        android:label="@string/menu_configuracio"
        tools:layout="@layout/fragment_configuracio" />
    <fragment
        android:id="@+id/nav_tancarsessio"
        android:name="dam.agamers.gtidic.udl.agamers.views.tancarsessio.TancarsessioFragment"
        android:label="@string/menu_tancarsessio"
        tools:layout="@layout/fragment_tancarsessio" />
    <fragment
        android:id="@+id/fragmentaddgame"
        android:name="dam.agamers.gtidic.udl.agamers.views.jocs.AddGameFragment"
        android:label="@string/fragment_addgame"
        tools:layout="@layout/fragment_addgame">

        <action
            android:id="@+id/action_fragmentaddgame_to_fragmentjocs"
            app:destination="@id/nav_jocs" />
    </fragment>

    <fragment
        android:id="@+id/nav_jocs"
        android:name="dam.agamers.gtidic.udl.agamers.views.jocs.JocsFragment"
        android:label="@string/menu_jocs"
        tools:layout="@layout/fragment_jocs">
        <action
            android:id="@+id/action_fragmentjocs_to_fragmentaddgame"
            app:destination="@id/fragmentaddgame" />
    </fragment>
    <fragment
        android:id="@+id/allxatmessages"
        android:name="dam.agamers.gtidic.udl.agamers.allxatmessages"
        android:label="allxatmessages" />

</navigation>