<?xml version="1.0" encoding="UTF-8"?>

    <layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/fondo_agamers"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/barra_superior" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="81dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/lodo_agamers"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@drawable/logo_sense_lletres"
        tools:ignore="UnknownIdInLayout" />

        <Button
            android:id="@+id/boto_solicitud"
            android:layout_width="121dp"
            android:layout_height="71dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="23dp"
            android:onClick="button3OnClick"
            android:text="@string/Enviar_peticio_amistat"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/valoration_icon"
            app:layout_constraintVertical_bias="0.342" />

        <ImageView
            android:id="@+id/valoration_icon"
            android:layout_width="99dp"
            android:layout_height="38dp"
            android:layout_marginTop="332dp"
            android:layout_marginBottom="87dp"
            android:contentDescription="@string/valoracions"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.775"
            app:srcCompat="@drawable/unnamed" />

        <Button
            android:id="@+id/boto_compartir"
            android:layout_width="121dp"
            android:layout_height="71dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="22dp"
            android:text="@string/compartir_perfil"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toEndOf="@+id/boto_xat"
            app:layout_constraintTop_toTopOf="@+id/valoration_icon"
            app:layout_constraintVertical_bias="0.352" />

        <Button
            android:id="@+id/boto_xat"
            android:layout_width="121dp"
            android:layout_height="71dp"
            android:layout_marginStart="132dp"
            android:layout_marginTop="61dp"
            android:layout_marginBottom="22dp"
            android:text="@string/xatejar"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/boto_solicitud"
            app:layout_constraintTop_toTopOf="@+id/valoration_icon"
            app:layout_constraintVertical_bias="0.342" />

        <TextView
        android:id="@+id/textView10"
        android:layout_width="241dp"
        android:layout_height="41dp"
        android:text="@string/sobre_usuari_x"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.621" />

    <TextView
        android:id="@+id/bio"
        android:layout_width="347dp"
        android:layout_height="97dp"
        android:layout_marginTop="56dp"
        android:text="@string/Text_bio"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/medalla1"
            android:layout_width="66dp"
            android:layout_height="57dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/medalla_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/medalla2"
            app:layout_constraintHorizontal_bias="0.761"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/gold_medal_png14" />

        <ImageView
            android:id="@+id/medalla2"
            android:layout_width="54dp"
            android:layout_height="58dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="68dp"
            android:contentDescription="@string/medalla_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/d4617896198de16dc541e9e73975b385_removebg_preview" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="257dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/assoliments_recents"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bio"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/usernametxt"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/valoration_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profileimage"
        app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/profileimage"
            android:layout_width="115dp"
            android:layout_height="99dp"
            android:layout_marginTop="134dp"
            android:layout_marginBottom="116dp"
            android:contentDescription="@string/imatge_perfil"
            app:layout_constraintBottom_toTopOf="@+id/boto_xat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView7"
            app:layout_constraintVertical_bias="0.632"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>